--- a/Pages/History.cshtml
+++ b/Pages/History.cshtml
@@ -29,11 +29,12 @@ https://cdn.jsdelivr.net/npm/fullcalendar@6.1.11/index.global.min.js
     
 </div>
 
-
-  <canvas id="myChart"></canvas>
+<div class = "parent" style = "width:1000px;">
+<div class = "child" style = "width:500px; float:left;">
+  <canvas id="myChart" width="200" height="100" ></canvas>
 
   <script>
-const xValues = ["Happy", "Sad", "Nuetral"];
+const xValues = ["Happy", "Sad", "Neutral"];
 const yValues = [55, 49, 44];
 const barColors = ["red", "green","blue"];
 
@@ -55,16 +56,54 @@ new Chart("myChart", {
 });
 </script>
 
+
 </div>
    
-
+<div class = "child" style = "width:500px; float:right;">
  <script>
 
       document.addEventListener('DOMContentLoaded', function() {
         var calendarEl = document.getElementById('calendar');
         var calendar = new FullCalendar.Calendar(calendarEl, {
-          initialView: 'dayGridMonth'
+          initialView: 'dayGridMonth',
+          events: [
+          {
+            id: 'a',
+            daysOfWeek : ['1', '4'],
+            title: 'sad',
+            startRecur: '2024-03-04', 
+            endRecur: '2024-03-31'
+            
+          },
+          {
+            id: 'b',
+            daysOfWeek : ['2', '5'],
+            title: 'happy',
+            startRecur: '2024-03-04',
+            endRecur: '2024-03-31' 
+           // endTime: '11:59'
+          }, 
+          {
+            id: 'c',
+            daysOfWeek : ['3', '6', '7'],
+            title: 'neutral',
+            startRecur: '2024-03-04',
+            endRecur: '2024-03-31' 
+           // endTime: '11:59'
+          }
+          ]
         });
+        var event1 = calendar.getEventById('a')
+        var event2 = calendar.getEventById('b')
+        var event3 = calendar.getEventById('c')
+       //var start1 = event1.start
+        //var start2 = event2.startRecur
+      //  var end2 = event2.endRecur
+       //var startTime2 = event2.startTime
+       
+       // var endTime = event.end
+      //  console.log(start1.toISOString())
+      // console.log(start2.toISOString())
         calendar.render();
       });
 
@@ -72,5 +111,6 @@ new Chart("myChart", {
 <body>
     <div id='calendar'></div>
   </body>
+</div>
 </div>
 
