--- a/Pages/Users/Index.cshtml
+++ b/Pages/Users/Index.cshtml
@@ -19,6 +19,9 @@
             <th>
                 @Html.DisplayNameFor(model => model.Users[0].Password)
             </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Users[0].Current)
+            </th>
             <th></th>
         </tr>
     </thead>
@@ -31,6 +34,9 @@
             <td>
                 @Html.DisplayFor(modelItem => item.Password)
             </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Current)
+                </td>
             <td>
                 <a asp-page="./Edit" asp-route-id="@item.Id">Edit</a> |
                 <a asp-page="./Details" asp-route-id="@item.Id">Details</a> |
