--- a/Pages/FileUpload.cshtml
+++ b/Pages/FileUpload.cshtml
@@ -117,17 +117,11 @@
         async function prediction(tensor) {
             const model = await loadModel();
             let result = model.predict(tensor).data();
-            console.log(result);
+            //console.log(result);
             return result;
         }
 
-        /* on page load (for debugging)
-        document.addEventListener('DOMContentLoaded', function() {
-            console.log("hi");
-            prediction();
-            
-        });
-        */
+
         document.getElementById('uploadBtn').addEventListener('click', function () {
             var fileInput = document.getElementById('customFile');
             var file = fileInput.files[0]; // Get the selected file
@@ -154,12 +148,14 @@
                 var currentDate = new Date();
                 var currentTime = currentDate.toLocaleString();
                 formData.append('timestamp', currentTime);
-
+                var emotion = "";
+                /*
                 var xhr = new XMLHttpRequest();
                 xhr.open('POST', '/FileUpload');
                 xhr.send(formData);
-
+                */
                 // Display loading overlay
+
                 document.getElementById('loadingOverlay').style.display = 'flex';
 
                 // Display image preview
@@ -171,32 +167,42 @@
                     // Display emotion box after image upload
                     document.getElementById('emotionBox').style.display = 'block';
 
-                    img.onload = function () {
+                    img.onload = async function () {
                         
                         console.log(img.width + 'x' + img.height);
                         let tensor = tf.browser.fromPixels(img)
                             .resizeNearestNeighbor([224, 224])
                             .expandDims();
-                        //LOOK AT THIS PART. currently taking too long to load model so prediction can't be done. find a way to wait for model to load first
-                        /*async() => {
-                            const model = await tf.loadLayersModel('tfjs_petemo/model.json');
-                            let predictions = model.predict(tensor).data();
-                            console.log(predictions);
-                        })();*/
-                        let result = prediction(tensor);
+
+                        let result = await prediction(tensor);
+                        console.log(result);
+                        let resultIndex = result.indexOf(Math.max.apply(Math, result));
+                        console.log(resultIndex);
+                        switch(resultIndex) {
+                            case 0:
+                                emotion = "Angry";
+                                break;
+                            case 1:
+                                emotion = "Happy";
+                                break;
+                            case 2:
+                                emotion = "Other";
+                                break;
+                            case 3:
+                                emotion = "Sad";
+                                break;
+                        }
                     }
-                    
-                    
                 };
                 reader.readAsDataURL(file);
-                /*
+                
                 // Simulate server response delay (remove this in actual implementation)
                 setTimeout(function () {
                     // Hide loading overlay
                     document.getElementById('loadingOverlay').style.display = 'none';
 
                     // Replace "Thinking..." with actual emotion received from server
-                    var emotion = "Positive"; // Set manually for now, will be replaced once we get emotion from server
+                    //var emotion = "Positive"; // Set manually for now, will be replaced once we get emotion from server
                     document.getElementById('emotionContent').innerHTML = emotion;
 
                     // Change emotion box color based on emotion
@@ -207,9 +213,10 @@
                     } else if (emotion === "Negative") {
                         document.getElementById('emotionBox').style.backgroundColor = "#dc7f7f";
                     }
-                }, 2000); // 2 second delay*/
+                }, 2000); // 2 second delay
             }
         });
+
     </script>
 </body>
 </html>
